--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -18,7 +18,7 @@
     "commander": "~2.9.0",
     "jszip": "~2.5.0",
     "macaca-utils": "~0.1.6",
-    "reliable-logger": "~1.0.7",
+    "xlogger": "~1.0.0",
     "request": "~2.69.0",
     "webdriver-dfn-error-code": "~1.0.0"
   },
