--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "commander": "~2.9.0",
     "jszip": "~2.5.0",
     "macaca-utils": "~0.1.6",
-    "xlogger": "~1.0.0",
     "request": "~2.69.0",
-    "webdriver-dfn-error-code": "~1.0.0"
+    "webdriver-dfn-error-code": "~1.0.0",
+    "xlogger": "~1.0.0"
   },
   "devDependencies": {
     "co-mocha": "~1.1.2",
