--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,4 @@ language: node_js
 node_js:
   - "4"
 sudo: false
-script: "make travis"
-after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
+script: "make test"
