--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ language: node_js
 node_js:
   - "4"
 sudo: false
+addons:
+  apt:
+    packages:
+      - xvfb
+install:
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1366x768x24 > /dev/null 2>&1 &
 script: "make test"
