--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "devDependencies": {
     "co-mocha": "~1.1.2",
-    "detect-port": "^0.1.4",
-    "istanbul": "*",
+    "istanbul": "^0.4.5",
     "jshint": "*",
+    "mocha": "^3.4.2",
     "pre-commit": "1.1.1",
     "should": "~8.0.2"
   },
