--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ dist: trusty
 addons:
   apt:
     sources:
-    - google-chrome
+      - google-chrome
     packages:
-    - google-chrome-stable
-    - xvfb
+      - google-chrome-stable
+      - xvfb
 before_install:
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
-script: "make test"
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+script:
+  - make travis
