--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.0.38",
+  "version": "1.0.39",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -18,7 +18,7 @@
     "adm-zip": "^0.4.7",
     "commander": "~2.9.0",
     "detect-port": "^1.0.1",
-    "macaca-utils": "~0.1.6",
+    "macaca-utils": "^1.0.0",
     "request": "~2.69.0",
     "webdriver-dfn-error-code": "~1.0.0",
     "xlogger": "~1.0.0"
