--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.0.39",
+  "version": "1.0.40",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -35,6 +35,9 @@
     "install": "node ./bin/macaca-chromedriver install",
     "test": "make test",
     "jshint": "make jshint"
+  },
+  "config": {
+    "defaultVersion": "2.33"
   },
   "pre-commit": [
     "jshint"
