--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 7
+  - 8
 sudo: required
 dist: trusty
 addons:
@@ -14,4 +14,5 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 script:
-  - make travis
+  - npm i
+  - npm run ci
