--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "co-mocha": "~1.1.2",
+    "git-contributor": "^1.0.3",
     "istanbul": "^0.4.5",
     "jshint": "*",
     "mocha": "*",
@@ -34,7 +35,8 @@
     "install": "node ./bin/macaca-chromedriver install",
     "test": "istanbul cover `npm bin`/_mocha",
     "lint": "jshint .",
-    "ci": "npm run lint && npm run test"
+    "ci": "npm run lint && npm run test",
+    "contributor": "git-contributor"
   },
   "config": {
     "defaultVersion": "2.33"
