--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.0.42",
+  "version": "1.0.43",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -15,7 +15,7 @@
     "url": "git://github.com/macacajs/macaca-chromedriver.git"
   },
   "dependencies": {
-    "adm-zip": "^0.4.7",
+    "adm-zip": "0.4.9",
     "commander": "~2.9.0",
     "detect-port": "^1.0.1",
     "macaca-utils": "^1.0.0",
