--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git://github.com/macacajs/macaca-chromedriver.git"
   },
   "dependencies": {
-    "adm-zip": "0.4.9",
+    "adm-zip": "0.4.13",
     "commander": "~2.9.0",
     "detect-port": "^1.0.1",
     "macaca-utils": "^1.0.0",
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "co-mocha": "~1.1.2",
+    "eslint": "^4.5.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "git-contributor": "^1.0.8",
-    "jshint": "*",
     "mocha": "*",
     "nyc": "^11.7.1",
     "pre-commit": "*"
@@ -34,7 +35,7 @@
   "scripts": {
     "install": "node ./bin/macaca-chromedriver install",
     "test": "nyc --reporter=lcov --reporter=text mocha",
-    "lint": "jshint .",
+    "lint": "eslint --ext js,jsx --fix lib test bin",
     "ci": "npm run lint && npm run test",
     "contributor": "git-contributor"
   },
