--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "eslint": "^4.5.0",
     "eslint-plugin-mocha": "^4.11.0",
     "git-contributor": "^1.0.8",
+    "husky": "^1.3.1",
     "mocha": "*",
-    "nyc": "^11.7.1",
-    "pre-commit": "*"
+    "nyc": "^11.7.1"
   },
   "scripts": {
     "install": "node ./bin/macaca-chromedriver install",
@@ -42,9 +42,11 @@
   "config": {
     "defaultVersion": "2.45"
   },
-  "pre-commit": [
-    "lint"
-  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint"
+    }
+  },
   "homepage": "https://github.com/macacajs/macaca-chromedriver",
   "license": "MIT"
 }
