--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint"
+      "pre-commit": "npm run lint"
     }
   },
   "homepage": "https://github.com/macacajs/macaca-chromedriver",
