--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -17,14 +17,13 @@
   "dependencies": {
     "adm-zip": "0.4.13",
     "commander": "~2.9.0",
-    "detect-port": "^1.0.1",
+    "detect-port": "1",
     "macaca-utils": "^1.0.0",
     "request": "~2.69.0",
     "webdriver-dfn-error-code": "~1.0.0",
     "xlogger": "~1.0.0"
   },
   "devDependencies": {
-    "co-mocha": "~1.1.2",
     "eslint": "^4.5.0",
     "eslint-plugin-mocha": "^4.11.0",
     "git-contributor": "^1.0.8",
