--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macaca-chromedriver",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Node.js wrapper for the selenium chromedriver.",
   "keywords": [
     "macaca",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "eslint": "^4.5.0",
     "eslint-plugin-mocha": "^4.11.0",
-    "git-contributor": "^1.0.8",
+    "git-contributor": "1",
     "husky": "^1.3.1",
     "mocha": "*",
     "nyc": "^11.7.1"
