--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ dist: trusty
 sudo: required
 
 addons:
+  chrome: stable
   apt:
-    sources:
-      - google-chrome
     packages:
-      - google-chrome-stable
       - xvfb
 before_install:
   - export DISPLAY=:99.0
